--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <h1>Dino Reyes Carreño</h1>
             <h2>Analista Programador</h2>
             <div class="redes">
-                <a href="#"><i class="fa-regular fa-envelope"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>   
+                <a href="#contacto"><i class="fa-regular fa-envelope"></i></a>
             </div>
         </div>
     </section> 
@@ -377,9 +375,7 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="fa-regular fa-envelope"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>   
+            <a href="dinoa.reyes@gmail.com"><i class="fa-regular fa-envelope"></i></a>
         </div>
     </footer>
 
