--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
 
                 <div class="col">
-                    <h3>Professional Skills</h3>
+                    <h3>Habilidades Profesionales</h3>
                     <div class="skill">
                         <span>Comunicación</span>
                         <div class="barra-skill">
