--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="contenedor-header">
         <header>
-            <div class="logo"><a href="#">Dino Web Page</a>
+            <div class="logo"><a href="#">Dino Web</a>
             </div>
             <nav id="nav">
                 <ul>
