--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <div class="col">
                     <form class="form" id="formulario" action="https://formspree.io/f/xleyzvyg"
                     method="POST" onsubmit="return validar();">
-                    <input type="text" id="nombre" name="message" placeholder="Tú Nombre">
+                    <input type="text" id="nombre" name="message" placeholder="Nombre">
                     <input name="message" id="telefono" type="number" placeholder="Teléfono">
                     <input type="email" id="correo" placeholder="Correo" name="email">
                     <input name="message" id="asunto" type="text" placeholder="Asunto">
